ws-slo/apps/llama-cpp/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llama-cpp-gateway
  namespace: shikanime
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp
      app.kubernetes.io/name: llama-cpp
  policyTypes:
    - Ingress
